Updated the post layout to display the correct co-author and updated the nav.scss and universal-nav.scss file to adjust the z-index for collapses

--- a/_sass/core/nav.scss
+++ b/_sass/core/nav.scss
@@ -943,7 +943,7 @@ nav#main-navigation.navbar-fixed-top {
     padding-bottom:0px;
 }
 #main-navigation div#navbar-collapse {
-    z-index: 1;
+    z-index: 3;
 }
 // CSS for the left aligned dropdowns
 
