--- a/_sass/core/universal-nav.scss
+++ b/_sass/core/universal-nav.scss
@@ -139,7 +139,7 @@ a.dropdown-toggle {}
     #universal-nav div#navbar {
         background-color: white;
         color: black;
-        z-index:999999999;
+        z-index:9999999;
         position: absolute;
         top:31px;
         width:100%;
